--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-countup": "^6.5.3",
     "react-dom": "^19.0.0",
     "react-intersection-observer": "^9.15.1",
+    "react-lazy-load-image-component": "^1.6.3",
     "react-router-dom": "^7.2.0",
     "react-scripts": "5.0.1",
     "swiper": "^11.2.4",
